<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/flowcharts"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/flowcharts"></item>

        <item
            android:id="@+id/preferences"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/preferences"></item>

        <item
            android:id="@+id/help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help"></item>

        <item
            android:id="@+id/about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about"></item>
    </group>
</menu>